Port MezzConfig GUI to Minecraft 26.3 on its own branch